--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,26 +1,21 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  /* --background: #1d212f; */
+  --background: #0f1116;
+  --foreground: white;
 }
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.elevateOnHover {
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+}
+.elevateOnHover:hover {
+  transform: scale(1.04);
+  box-shadow: 6px 6px 6px black;
 }
